Demo1/4_yesserv_lb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gslb
  name: yesservlb
  namespace: default
  annotations:
    nodeportlocal.antrea.io/enabled: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: yesserv
