Demo1/4a_yesserv_lb_fixip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gslb
  name: yesserv13
  namespace: default
spec:
  loadBalancerIP: 172.17.15.13
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: yesserv
